--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+alembic==1.6.2
 autobahn==21.2.1
 cbor==1.0.0
 cbor2==5.2.0
 cffi==1.14.5
 cryptography==3.4.6
 flatbuffers==1.12
+greenlet==1.1.0
 hyperlink==21.0.0
 idna==3.1
+Mako==1.1.4
+MarkupSafe==2.0.1
 msgpack==1.0.2
 py-ubjson==0.16.1
 pycparser==2.20
+python-dateutil==2.8.1
+python-editor==1.0.4
 PyYAML==5.4.1
+rope==0.18.0
+six==1.16.0
+SQLAlchemy==1.4.15
 txaio==20.12.1
 ujson==4.0.2
 websockets==8.1
