--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.1
 Mako==1.1.4
 MarkupSafe==2.0.1
 msgpack==1.0.2
+psycopg2==2.8.6
 py-ubjson==0.16.1
 pycparser==2.20
 python-dateutil==2.8.1
